# fintech-tutorial

./: README.md  SCHEDULE.md  docker-compose.cache.yml  docker-compose.yml  docker-compose_grpc.yml  docker-compose_sfn.yml  lambda.nginx.conf
.github/workflows/: main.yml
api/: Dockerfile  backend.proto  backend_pb2.py  backend_pb2_grpc.py  requirements.txt  service.py  test_service.py
backend/: Dockerfile  backend.proto  backend_pb2.py  backend_pb2_grpc.py  requirements.txt  service.py  test_service.py
cache/: app.py  test_app.py
compute/: Dockerfile  backend.proto  backend_pb2_grpc.py  requirements.txt  service.py  support.cc  support.cpp  support.py  test_service.py  test_support.py
cpp_backend/: CMakeLists.txt  Dockerfile  backend.proto  backend_client.cc  backend_server.cc  greeter_client.cc
cpp_compute/: CMakeLists.txt  Dockerfile  backend_client.cc
migrate/: 000001_create_stock_table.up.sql  000002_create_avg_table.down.sql  000002_create_avg_table.up.sql  000003_create_materialized_view.down.sql  000003_create_materialized_view.up.sql
scrapper/: Dockerfile  app.py  sfn.json  sfn_mvg_avg.json  test_app.py
